Fix question nav spacing

--- a/css/app.css
+++ b/css/app.css
@@ -76,7 +76,44 @@ h3 {
 .question-nav-tooltip {
 	width: 185px;
 	background: #344340;
-	
+	padding: 10px;
+}
+
+.question-nav-tooltip h1 {
+	font-family: Open Sans, sans-serif;
+	color: #fff;
+	font-size: 16px;
+	font-weight: 700;
+	padding-bottom: 10px;
+}
+
+.question-nav-tooltip h2 {
+	font-family: Montserrat, sans-serif;
+	color: #fff;
+	font-size: 10px;
+	text-transform: uppercase;
+	padding-bottom: 5px;
+}
+
+.question-nav-tooltip h3 {
+	font-family: Open Sans, sans-serif;
+	color: #FF5D55;
+	font-size: 10px;
+	font-style: italic;
+}
+
+#footer-outer {
+	position: absolute;
+	background: #314340;
+	bottom: 0;
+	min-height: 100px;
+	width: 100%;
+}
+
+#footer {
+	width: 940px;
+	margin: 0 auto;
+	padding: 30px;
 }
 
 /* Header ..................................................................*/
@@ -222,13 +259,21 @@ header a {
 	font-family: Montserrat, sans-serif;
 	font-size: 12px;
 	text-transform: uppercase;
-	padding: 14px 0 14px 5px;
+	padding: 14px 0 14px 8px;
 }
 
 .question-numbers li {
 	display: inline-block;
-	padding: 0 20px 0 17px;
+	padding: 0 23px 0 16px;
 	background: url(../img/divider.png) right no-repeat;
+}
+
+.question-numbers li.nodivider {
+	background-image: none;
+}
+
+.question-numbers li:hover {
+	background: #fff;
 }
 
 .question-numbers li > a {
@@ -237,7 +282,6 @@ header a {
 }
 
 .question-numbers li > a:hover {
-	background: #fff;
 }
 
 #advance-question {
